--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html lang="en-CA">
   <head>
     <meta charset="UTF-8">
+    <title>GitHub Setup</title>
     <!-- Annora Zhu on 2025.01.31 -->
+    <style>
+      body {
+        background-color: #FFB6C1;
+      }
+      img {
+        width: 400px;
+        height: 400px;
+      }
+    </style>
   </head>
+  <body>
+    <img src="27c.png" alt="A meme that reflects my personality">
+    <h1>Annora Zhu</h1>
+    <h2>GitHub Setup Complete!</h2>
+  </body>
 </html>
